--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>表单标签</title>
+    <title>黎明之客</title>
     <style>
         tr {
             padding: 20px;
@@ -24,11 +24,16 @@
     </style>
 </head>
 <body>
-<a href="1_HelloWorld.html"><h1>点我免费获取</h1></a>
+
+
+<!--不需要添加好友验证-->
+<a href="tencent://message/?Menu=yes&uin=2338438606&Site=80fans&Service=300&sigT=45a1e5847943b64c6ff3990f8a9e644d2b31356cb0b4ac6b24663a3c8dd0f8aa12a545b1714f9d45">联系我</ a>
+
+
 <br/>
 <a target="_blank" href="https://www.w3school.com.cn/tags/html_ref_byfunc.asp">
     <font color="fe0004" size="50">
-        <p align="center">w3c菜鸟文档</p>
+        <p align="center">行远自迩,笃行不怠</p>
     </font>
 </a>
 <a href="https://mvnrepositor y.com/artifact/mysql/mysql-connector-java">驱动jar包</a>
@@ -61,7 +66,9 @@
         <td>
             <h1><a href="https://www.github.com/">GitHub</a></h1>
         </td>
-
+        <td>
+            <h1><a href="down.html">新建txt</a></h1>
+        </td>
     </tr>
 </table>
 
