--- a/down.html
+++ b/down.html
@@ -40,7 +40,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <label>文件内容</label>
-              <textarea class="form-control" rows="4" id="content">txt文件内要写什么呢~</textarea>  
+              <textarea class="form-control" rows="4" id="content">内容</textarea>  
             </div>
 
 
