--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 <body>
 
 
-<!--不需要添加好友验证-->
-<a href="tencent://message/?Menu=yes&uin=2338438606&Site=80fans&Service=300&sigT=45a1e5847943b64c6ff3990f8a9e644d2b31356cb0b4ac6b24663a3c8dd0f8aa12a545b1714f9d45">联系我</ a>
-
+<a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=rR6Rp4FyOj5pXRX7POYRpsEmrfJKw4Lm&jump_from=webapi&authKey=LbG7rpocuiMguVKT4odxx4jL6oRibdoNt+tIe4JaQjsV2SIc971akXHJuR0BEcns"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="云朵儿" title="云朵儿"></a>
 
 <br/>
 <a target="_blank" href="https://www.w3school.com.cn/tags/html_ref_byfunc.asp">
