--- a/down.html
+++ b/down.html
@@ -27,12 +27,12 @@
       </style>
 </head>
 <body>
-  <script>
-    void function(a){a.siteToolbar=function b(a){b.setting=a||{}},document.write
-    ('<div class="ucren-toolbar-placeholder" style="height:3000px;"></div><scri'
-        +'pt src="//ucren.com/ucren-toolbar/scripts/main.js"><\/script>')}(this);
-    siteToolbar();
-</script>
+<!--  <script>-->
+<!--    void function(a){a.siteToolbar=function b(a){b.setting=a||{}},document.write-->
+<!--    ('<div class="ucren-toolbar-placeholder" style="height:3000px;"></div><scri'-->
+<!--        +'pt src="//ucren.com/ucren-toolbar/scripts/main.js"><\/script>')}(this);-->
+<!--    siteToolbar();-->
+<!--</script>-->
 
 
   <div class="container-fluid">
