--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <tr>
         <td><h1><a href="file/cloud.apk">云朵儿</a></h1></td>
         <td><h3>一个音标练习的安卓（8以上版本）的软件</h3></td>
-
+        <td><h1><a href="file/cloud.apk">v1.0</a></h1></td>
     </tr>
 </table>
 
