--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <caption><h2>软件下载</h2></caption>
     <tr>
         <td><h1><a href="file/cloud.apk">云朵儿</a></h1></td>
-        <td><h3>一个音标练习的安卓（8以上版本）的软件</h3></td>
+        <td><h3>一个音标练习的安卓（8以上版本）的软件,自由录音，快速查找和记忆，保存喜欢的句子</h3></td>
         <td><h1><a href="file/cloud.apk">v1.0</a></h1></td>
     </tr>
 </table>
