--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
         <td><h3>一个音标练习的安卓（8以上版本）的软件,自由录音，快速查找和记忆，保存喜欢的句子</h3></td>
         <td><h1><a href="file/cloud.apk">v1.0</a></h1></td>
     </tr>
+
+    <tr>
+        <td><h1><a href="file/cloud.apk">画板</a></h1></td>
+        <td><h3>
+            一个简洁的画图软件，全屏可画，还可擦
+        </h3></td>
+        <td><h1><a href="file/cloud.apk">v1.0</a></h1></td>
+    </tr>
+
 </table>
 
 
