--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
             <h1><a href="down.html">新建txt</a></h1>
         </td>
     </tr>
+    <tr>
+        <td>
+            <h1><a href="http://tool.chinaz.com/dns/">
+                ping 主机
+            </a></h1>
+        </td>
+    </tr>
 </table>
 
 <hr size="5" color="#894311"/>
