add game and piano
增加了掷色子

--- a/index.html
+++ b/index.html
@@ -88,13 +88,28 @@
     </tr>
 
     <tr>
-        <td><h1><a href="file/cloud.apk">画板</a></h1></td>
+        <td><h1><a href="file/drawer.apk.apk">画板</a></h1></td>
         <td><h3>
             一个简洁的画图软件，全屏可画，还可擦
         </h3></td>
-        <td><h1><a href="file/cloud.apk">v1.0</a></h1></td>
+        <td><h1><a href="file/drawer.apk.apk">v1.0</a></h1></td>
     </tr>
 
+    <tr>
+        <td><h1><a href="file/shaizi.apk">掷色子</a></h1></td>
+        <td><h3>
+            一个掷色子游戏，用来下赌注挺好~
+        </h3></td>
+        <td><h1><a href="file/shaizi.apk">v1.0</a></h1></td>
+    </tr>
+
+    <tr>
+        <td><h1><a href="file/mypiano-debug.apk">指舞</a></h1></td>
+        <td><h3>
+            一个钢琴软件，目前屏幕适配有问题
+        </h3></td>
+        <td><h1><a href="file/mypiano-debug.apk">d1.0</a></h1></td>
+    </tr>
 </table>
 
 
