--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
         </h3></td>
         <td><h1><a href="file/mypiano-debug.apk">d1.0</a></h1></td>
     </tr>
+
+    <tr>
+        <td><h1><a href="file/mario.apk">超级玛丽</a></h1></td>
+        <td><h3>
+            超级玛丽，小霸王游戏，仅支持安卓6以上运行
+        </h3></td>
+        <td><h1><a href="file/mario.apk">v1.0</a></h1></td>
+    </tr>
 </table>
 
 
