--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <tr>
         <td><h1><a href="file/game24.apk">二十四点</a></h1></td>
         <td><h3>
-            二十四点，玩法是1到13可重复的随机四个数在只能用加减乘除的情况下得到24这个值，游戏内更多的说明请加群
+            二十四点，已优化无障碍，玩法是1到13可重复的随机四个数在只能用加减乘除的情况下得到24这个值，游戏内更多的说明请加群
         </h3></td>
         <td><h1><a href="file/game24.apk">v1.0</a></h1></td>
     </tr>
