--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 <body>
 
 
-<a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=rR6Rp4FyOj5pXRX7POYRpsEmrfJKw4Lm&jump_from=webapi&authKey=LbG7rpocuiMguVKT4odxx4jL6oRibdoNt+tIe4JaQjsV2SIc971akXHJuR0BEcns"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="云朵儿" title="云朵儿"></a>
+<a target="_blank"
+   href="https://qm.qq.com/cgi-bin/qm/qr?k=rR6Rp4FyOj5pXRX7POYRpsEmrfJKw4Lm&jump_from=webapi&authKey=LbG7rpocuiMguVKT4odxx4jL6oRibdoNt+tIe4JaQjsV2SIc971akXHJuR0BEcns"><img
+        border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="云朵儿" title="云朵儿"></a>
 
 <br/>
 <a target="_blank" href="https://www.w3school.com.cn/tags/html_ref_byfunc.asp">
@@ -84,6 +86,17 @@
         <td><a href="game/zwdzjs-v1/index.html"><h1>植物大战僵尸1</h1></a></td>
         <td><a href="game/zwdzjs-v2/index.html"><h1>植物大战僵尸2</h1></a></td>
     </tr>
+    <tr>
+        <td><h1><a href="game/2048/index.html">
+            2048
+        </a></h1></td>
+        <td><h1><a href="game/dxs/index.html">
+            猜牌
+        </a></h1></td>
+        <td><h1><a href="game/tafang/index.html">
+            塔防
+        </a></h1></td>
+    </tr>
 </table>
 
 <hr size="5" color="#894311"/>
@@ -137,7 +150,6 @@
     </tr>
 
 </table>
-
 
 
 </body>
