--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                 ping 主机
             </a></h1>
         </td>
+        <td>
+            <h1><a href="https://requests.readthedocs.io/en/latest/">
+                requests
+            </a></h1>
+        </td>
     </tr>
 </table>
 
