--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                 requests
             </a></h1>
         </td>
+        <td>
+            <h1><a href="https://www.kuaidaili.com/free/">
+                proxy
+            </a></h1>
+        </td>
+
     </tr>
 </table>
 
