--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
                 中国大学
             </a></h1>
         </td>
+        <td>
+            <h1><a href="https://xuexi.boxuegu.com/lesson/?id=3210">
+                短视频
+            </a></h1>
+        </td>
+
 
 
     </tr>
