--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>黎明之客</title>
+    <title>特教食堂餐厅食谱</title>
     <style>
         tr {
             padding: 20px;
@@ -23,166 +23,374 @@
         }
     </style>
 </head>
+
 <body>
 
+<pre>特教餐厅食谱
+（供大家参考，欢迎选购。）
 
-<a target="_blank"
-   href="https://qm.qq.com/cgi-bin/qm/qr?k=rR6Rp4FyOj5pXRX7POYRpsEmrfJKw4Lm&jump_from=webapi&authKey=LbG7rpocuiMguVKT4odxx4jL6oRibdoNt+tIe4JaQjsV2SIc971akXHJuR0BEcns"><img
-        border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="云朵儿" title="云朵儿"></a>
+一、特教风味大餐：
+一、早餐食谱:
+煮鸡蛋1元／个；
+茶蛋1.5元／个；
+煎蛋1.5元／个；
+玉米饼2元／个；
+素馅馅饼2元／个；
+猪肉馅饼3元／个；
+蒸饺1元／个；
+烧麦1.5元／个；
+马拉糕2元／个；
+肉包子2元／个；
+素包子1.5元／个；
+奶黄包0.8元／个；
+紫薯包0.8元／个；
+粥1元/杯；
+土豆丝煎蛋饼3元／个；
+馒头0.5元／个；
+牛肉馅饼3元／个；
+花卷1.5元／个；
+豆浆1元/个；
+馒头0.5元/个；
+韭菜盒子2.5元/个；
+千层饼2元/个；
+手抓饼2元/个；
+玉米饼2元/个；
+油炸糕2元/个；
+酸奶麻花1.5/半根；
+油条1元/半根；
+豆沙包0.8元/根；
+糖饼2元/个；
+发面饼2/个。
+（早餐实时变化，上面食谱仅供参考。）
 
-<br/>
-<a target="_blank" href="https://www.w3school.com.cn/tags/html_ref_byfunc.asp">
-    <font color="fe0004" size="50">
-        <p align="center">行远自迩,笃行不怠</p>
-    </font>
-</a>
-<a href="https://mvnrepositor y.com/artifact/mysql/mysql-connector-java">驱动jar包</a>
-<a href="http://www.bootcss.com">bootstrap框架文档</a>
-<a href="https://www.w3school.com.cn/tags/html_ref_eventattributes.asp">html中window的属性</a>
-<table align="center" style="margin: 9px;" border="6">
-    <tr>
-        <td><h1><a href="https://element.eleme.cn/#/zh-CN">vue的组件中文网</a></h1></td>
-        <td><h1><a href="http://www.spring.io">spring框架官网</a></h1></td>
-        <td><h1><a href="https://www.w3school.com.cn">w3c菜鸟文档</a></h1></td>
-    </tr>
-    <tr>
-        <td><h1><a href="http://www.bootcss.com">bootstrap框架</a></h1></td>
-        <td><h1><a href="https://mvnrepository.com/">maven仓库</a></h1></td>
-        <td><h1><a href="https://medtiku.com/">医学题库</a></h1></td>
-    </tr>
-    <tr>
-        <td><h1><a
-                href="https://m.bilibili.com/space/483162496?share_medium=android&share_plat=android&share_source=WEIXIN&share_tag=s_i&timestamp=1650938965&unique_k=2UuHl32">B站英语兔</a>
-        </h1></td>
-        <td><h1><a href="https://www.icourse163.org/home.htm?userId=1433516970#/home/course">我的慕课</a></h1></td>
+套餐系列：
+两素+米饭，5援；
+一荤一素+米饭，6元；
+三素+米饭，7元；
+一荤两素+米饭，8元；
+两荤+米饭，8元；
+两荤一素+米饭，9元；
+三荤+米饭，11元。
 
-        <td><h1><a href="https://im.dingtalk.com/">叮叮</a></h1></td>
+二、贡茶
 
-    </tr>
-    <tr>
-        <td>
-            <h1><a href="http://element-cn.eleme.io/#/zh-CN">ElementUI</a></h1>
-        </td>
-        <td>
-            <h1><a href="https://www.github.com/">GitHub</a></h1>
-        </td>
-        <td>
-            <h1><a href="down.html">新建txt</a></h1>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <h1><a href="http://tool.chinaz.com/dns/">
-                ping 主机
-            </a></h1>
-        </td>
-        <td>
-            <h1><a href="https://requests.readthedocs.io/en/latest/">
-                requests
-            </a></h1>
-        </td>
-        <td>
-            <h1><a href="https://www.kuaidaili.com/free/">
-                proxy
-            </a></h1>
-        </td>
-    </tr>
+店长推荐（冷/热）大：
+清新小茉莉11.9元；
+红石榴葡萄冻11.9元；
+红牛能量气泡饮11.9元；
+茉莉桃胶炖奶13.9元；
+小吊梨汤9.9元；
+整颗炖梨11.9元。
 
-    <tr>
-        <td>
-            <h1><a href="https://www.json.cn/json/jsononline.html">
-                json解析
-            </a></h1>
-        </td>
+0脂轻乳茶（冷/热）中：
+伯牙绝弦9元；
+白兰拂晓9元；
+伯爵红茶9元；
+鲜芋牛奶西米露9元。
 
-        <td>
-            <h1><a href="https://www.icourse163.org/">
-                中国大学
-            </a></h1>
-        </td>
-        <td>
-            <h1><a href="https://xuexi.boxuegu.com/lesson/?id=3210">
-                短视频
-            </a></h1>
-        </td>
+厚乳牛乳茶（冷/热）中：
+玫瑰桃胶牛乳茶13.9元；
+厚芋泥牛乳茶9.9元；
+黑糖板栗牛乳茶11.9元；
+椰香板栗牛乳茶11.9元。
 
+活力清果茶（冷）大：
+冰鲜柠檬水4元；
+暴打鲜橙多7元；
+百香鲜芒果8元；
+莓莓鲜果茶8元；
+纯茶茉莉雪芽5元；
+伯爵柠檬红茶6元；
+满红葡萄柚8元；
+金桔柠檬百香果8元；
+芭乐桃桃冰9.9元；
+霸气葡萄桑葚9.9元；
+芒果杨枝甘露（中）9.9元；
+芒果杨枝甘露（大）11.9元。
 
+经典奶茶（冷/热）中/大：
+珍珠奶茶（中）6元，（大）8元；
+糖炒板栗奶茶（中）9元；
+奶香玉米露（中）6元；
+招牌蛋糕芋圆烤奶（大）9元；
+奶茶大满贯（大）10元；
+芋泥大满贯（大）10元；
+巧克力熔岩可可（大）10.9元；
+麻薯蛋糕烤奶（大）10.9元；
+抹茶红豆奶茶（大）11.9元；
+超厚芋泥燕麦奶（大）11.9元。
 
-    </tr>
-</table>
+气泡/养乐多（冷）大：
+元气青提泡泡9元；
+百香果气泡养乐多11.8元；
+草莓养乐多8.8元；
+金桔柠檬养乐多8.8元。
 
-<hr size="5" color="#894311"/>
-<table align="center" style="margin: 9px;" border="6">
-    <caption><h2>在线游戏</h2></caption>
-    <tr>
-        <td><a href="game/zwdzjs-v1/index.html"><h1>植物大战僵尸1</h1></a></td>
-        <td><a href="game/zwdzjs-v2/index.html"><h1>植物大战僵尸2</h1></a></td>
-    </tr>
-    <tr>
-        <td><h1><a href="game/2048/index.html">
-            2048
-        </a></h1></td>
-        <td><h1><a href="game/dxs/index.html">
-            猜牌
-        </a></h1></td>
-        <td><h1><a href="game/tafang/index.html">
-            塔防
-        </a></h1></td>
-    </tr>
-</table>
+提神咖啡（冷/热）中：
+美式8元；
+橙c美式8元；
+拿铁9.9元；
+香草拿铁9.9元；
+生椰拿铁9.9元；
+樱花拿铁9.9元。
 
-<hr size="5" color="#894311"/>
+芝士奶盖/冰沙（冷/热）中：
+奥利奥芋见奶绿（中）10.9元；
+可可奶霜（中）10.9元；
+霸气芝士芒果（大）12元；
+红豆沙牛乳冰（大）12元。
 
-<table align="center" style="margin: 9px;" border="6">
-    <caption><h2>软件下载</h2></caption>
-    <tr>
-        <td><h1><a href="file/cloud.apk">云朵儿</a></h1></td>
-        <td><h3>一个音标练习的安卓（8以上版本）的软件,自由录音，快速查找和记忆，保存喜欢的句子</h3></td>
-        <td><h1><a href="file/cloud.apk">v1.0</a></h1></td>
-    </tr>
+冰淇淋/茶：
+草莓脆筒5元；
+牛奶脆筒4元；
+双拼脆筒5元；
+草莓摇摇奶昔8元；
+蓝莓摇摇奶昔8元。
 
-    <tr>
-        <td><h1><a href="file/drawer.apk.apk">画板</a></h1></td>
-        <td><h3>
-            一个简洁的画图软件，全屏可画，还可擦
-        </h3></td>
-        <td><h1><a href="file/drawer.apk.apk">v1.0</a></h1></td>
-    </tr>
+冰淇淋大圣代：
+草莓大圣代7元；
+蓝莓大圣代7元；
+黑糖珍珠大圣代7元；
+巧克力奥利奥圣代8元。
 
-    <tr>
-        <td><h1><a href="file/shaizi.apk">掷色子</a></h1></td>
-        <td><h3>
-            一个掷色子游戏，用来下赌注挺好~
-        </h3></td>
-        <td><h1><a href="file/shaizi.apk">v1.0</a></h1></td>
-    </tr>
+1元加料：
+珍珠椰果红豆布丁仙草脆波波芋圆。
 
-    <tr>
-        <td><h1><a href="file/mypiano-debug.apk">指舞</a></h1></td>
-        <td><h3>
-            一个钢琴软件，目前屏幕适配有问题
-        </h3></td>
-        <td><h1><a href="file/mypiano-debug.apk">d1.0</a></h1></td>
-    </tr>
+甜度选择：
+3分糖，5分糖，7分糖，无糖，全糖。
 
-    <tr>
-        <td><h1><a href="file/mario.apk">超级玛丽</a></h1></td>
-        <td><h3>
-            超级玛丽，小霸王游戏，仅支持安卓6以上运行
-        </h3></td>
-        <td><h1><a href="file/mario.apk">v1.0</a></h1></td>
-    </tr>
+温度选择：
+正常冰，少冰，去冰，热。
 
-    <tr>
-        <td><h1><a href="file/game24.apk">二十四点</a></h1></td>
-        <td><h3>
-            二十四点，已优化无障碍，玩法是1到13可重复的随机四个数在只能用加减乘除的情况下得到24这个值，游戏内更多的说明请加群
-        </h3></td>
-        <td><h1><a href="file/game24.apk">v1.0</a></h1></td>
-    </tr>
+自选水果捞7.9半斤，
+经典原味酸奶，
+藻蓝蛋白酸奶，
+草莓风味酸奶。
 
-</table>
+三、粉圈：
+原味肉酱米粉，9元；
+酸辣肉酱米粉，10元；
+鱼丸肉酱米粉，11元；
+蟹棒肉酱米粉，11元；
+油条肉酱米粉，11元；
+煎蛋肉酱米粉，11元；
+卤蛋肉酱米粉，11元；
+腊肠肉酱米粉，12元；
+肥牛肉酱米粉，13元；
+全家福肉酱米粉，18元；
+原味螺蛳粉，12元；
+煎蛋螺蛳粉，14元；
+卤蛋螺蛳粉，14元；
+鱼丸螺蛳粉，14元；
+蟹棒螺蛳粉，14元；
+鸭爪螺蛳粉，15元；
+网红炸弹螺蛳粉，15元；
+全家福螺蛳粉，20元。
+（单加青菜2元，干豆腐丝2元，煎蛋/卤蛋2元，丸类3元，油条3元，网红炸蛋3元。）
+鸡架拌面11元;
+鸡腿拌面13元;
+单加菜品：鸡心、鸡肚、鸡肝、豆皮、土豆片、藕片、花生米、鹌鹑蛋、金针菇、海带、芋头粉、干豆腐丝、鱼丸、鱼豆腐配菜3元/份，单加菜品每天随时调整仅供参考。
 
+四、匠心卤：
+（卤肉饭系列）
+招牌卤肉饭，14元；
+卤汁千叶豆腐，9元；
+卤汁鸡杂饭，12元；
+卤汁鸡排饭，12元；
+卤汁肉肠饭，12元；
+金针肉卷饭，12元；
+卤汁酥肉饭，12元；
+鲜香脆骨饭，13元；
+椒麻鸡肉饭，13元；
+椒麻鸭肉饭，13元；
+卤汁鸡腿饭，13元；
+卤汁鸭腿饭，13元；
+金牌肘子饭，16元。
+（任意菜品可以双拼，米饭无限添加）
+（炒面系列）
+火腿肠炒面，10元；
+青菜炒面，9元；
+鸡蛋炒面，10元；
+火腿肠炒面，10元；
+香辣肉丝炒面，12元。
+（炒饭系列）
+蛋炒饭，8元；
+辣白菜炒饭，10元；
+鱼丸炒饭，11元；
+香辣肉丝炒饭，12元；
 
+五、有家面馆
+（汤面系列）
+清汤面，7元；
+肉沫芽菜面，9元；
+老坛酸菜面，9元；
+招牌羊杂面，11元；
+滋滋烤肉面，11元；
+红烧牛肉面，14元；
+老坛豆角面，9元；
+飘香卤肉面，13元；
+（拌面系列）
+麻酱凉拌面，8元；
+酸菜拌面，9元；
+肉燥拌面，9元；
+烤肉拌面，10元；
+鸡丝拌面，10元；
+酸豆角拌面，10元；
+麻酱凉拌面，8元；
+酸菜拌面，9元；
+肉燥拌面，9元；
+烤肉拌面，10元；
+鸡丝拌面，10元；
+酸豆角拌面，10元；
+（炸酱面系列）
+鸡蛋炸酱面，7元；
+混合炸酱面，9元；
+招牌肉酱面，10元；
+（卤味系列）
+卤蛋，2元：
+卤肉，3元；
+卤肠，2元；
+羊杂，6元；
+牛肉，6元；
+
+（店长强烈推荐：）
+招牌羊杂面，11元；
+飘香卤肉面，13元；
+红烧牛肉面，14元；
+
+六、特教6788肉酱拌饭土豆泥
+（肉酱土豆泥系列）
+肉酱土豆泥拌饭，9元；
+鸡排土豆泥拌饭，12元；
+韩式炸鸡土豆泥拌饭，13元；
+双椒鸡丁土豆泥拌饭，13元；
+战斧鸭腿土豆泥拌饭，15元；
+T骨猪扒土豆泥拌饭，15元；
+黑胡椒腿排土豆泥拌饭，15元；
+虾仁肉酱土豆泥拌饭，16元；
+（口味：传统、咖喱、香辣、番茄）
+（蟹黄拌饭系列）
+蟹黄拌饭，11元；
+蟹黄鸡排拌饭，12元；
+蟹黄双椒鸡丁拌饭，13元；
+蟹黄韩式炸鸡拌饭，13元；
+蟹黄战斧鸭腿拌饭，15元；
+蟹黄T骨猪扒拌饭，15元；
+蟹黄黑胡椒腿排拌饭，15元；
+蟹黄虾仁拌饭，16元。
+
+七、纳福早餐（杨国福麻辣烫屋内）
+素馅包子1.5
+肉馅包子2元
+鲜肉小笼包6.5元/屉（8个）半屉4元
+牛肉小笼包7.5元/屉（8个）半屉4元
+灌汤包7元/屉
+奶黄包7元/屉
+糯米烧7元/屉
+鲜肉烧卖7元/屉
+牛肉蒸饺7元/屉
+驴肉蒸饺7元/屉
+豆浆甜奶2.5元
+红枣2.5元
+原味豆浆2元
+汤饺7元
+素饺子10元/份
+荤饺子12元/份
+（驴肉，猪肉，猪肉大葱，猪肉酸菜，牛肉大葱，猪肉青椒，猪肉香姑，猪肉白菜，猪肉芹菜，素三鲜，猪肉玉米。）
+
+八、杨国福麻辣烫（麻辣烫、麻辣拌自选14.8元/斤）。
+
+超级有料，八小时慢炖排骨汤；
+独特口味，欢迎同学们光临！！
+
+九汉堡
+劲脆鸡肉堡，6元；
+田园蔬菜堡，7元；
+香辣鸡腿堡，8元；
+鳕鱼堡，8元；
+至尊鲜虾堡，9元；
+爆浆芝士鸡排堡，9元；
+奥尔良烤堡，9元；
+劲脆双层鸡肉堡，9元；
+蟹黄堡，10元；
+香嫩牛肉堡，7元；
+芝士牛肉堡，9元；
+双层牛肉堡，10元；
+双层芝士牛肉堡，12元；
+香辣双层鸡腿堡，12元；
+芝士鸡腿肉霸堡，13元；
+老北京鸡肉卷，6元；
+墨西哥鸡肉卷，6元。
+（推荐）劲脆鸡肉堡10元2个；
+（推荐）香辣鸡腿堡14元2个。
+（小吃系列）
+小鸡排3元（个）；
+玉米杯4元（杯）；
+紫薯球5元（5个）；
+骨肉相连5元（2个）；
+川香鸡柳5元（2个）；
+上校鸡块5元（份）；
+薯条小份（5元）；
+薯条大份（8元）；
+红豆派5元（个）；
+香芋派5元（个）；
+菠萝派5元（个）；
+雪鱼条6元（3个）；
+霸王鸡条6元（5个）；
+爆浆鸡排6元（个）；
+鸡米花7元（份）；
+无骨鸡柳7元（份）；
+棒棒虾7元（2个）；
+香辣鸡翅7元（1对）；
+脆皮小鸡腿7元（1对）；
+藤椒鸡腿7元（个）；
+脆皮鸡腿7元（个）；
+墨鱼爆蛋8元（5个）；
+奥尔良烤翅8援（1对）；
+甘梅地瓜条8元（份）；
+芝士热狗棒8元（个）；
+招牌大鸡排10元（个）；
+奥尔良手枪腿11元（个）；
+鸡翅包饭12元（个）；
+鸡柳三合一13元（份）；
+蛋挞5元（2个）；
+招牌韩式炸鸡23元（份）；
+无骨韩式炸鸡23元（份）；
+脆皮童子鸡25元（只）；
+推荐脆皮小鸡腿12元（4个）；
+黑胡椒牛肉披萨，35元；
+缤纷水果披萨，35元；
+火山石烤肠披萨，35元。
+（单人套餐）
+香辣鸡腿堡-鸡肉卷-可乐，16元；
+香辣鸡腿堡-薯条-可乐，15元；
+香辣鸡腿堡-鸡块-可乐，15元；
+香辣鸡腿堡-辣翅-可乐，17元；
+劲脆鸡肉堡-鸡排-可乐，11元；
+劲脆鸡肉堡-鸡排-鸡米花-可乐，18元；
+田园蔬菜堡-鸡块-薯条-可乐，18元；
+奥尔良烤堡-奥尔良烤翅-可乐，19元；
+香辣鸡腿堡-辣翅-鸡米花-可乐，24元；
+香辣鸡腿堡-2个鸡排-薯条-可乐，21元；
+牛肉堡-鸡块-薯条-可乐，19元；
+鲜虾堡-棒棒虾-薯条-可乐，23元；
+雪鱼堡-雪鱼条-薯条-可乐，21元；
+蟹黄堡-蟹脚棒-薯条-可乐，23元。
+（双人套餐）
+香辣鸡腿堡2个-鸡米花-2个鸡排-薯条-2杯可乐，38元；
+香辣鸡腿堡-鸡肉卷-鸡米花-辣翅-薯条-2杯可乐，37元；
+香辣鸡腿堡2个-鸡米花-辣翅-薯条-2杯可乐，39元；
+奥尔良烤堡2个-烤翅-辣翅-薯条-2杯可乐，42元；
+香辣鸡腿堡2个-骨肉相连2个-鸡块-薯条-2杯可乐，36元。
+
+（店长强烈推荐，超值优惠：）
+脆皮小鸡腿：12元4个；
+劲脆鸡肉堡10元2个；
+香辣鸡腿堡14元2个；
+香辣鸡腿堡+烤肉卷+可乐=16元。
+
+以上食品若有变化，会及时通知大家，若有疑问可以和食堂负责人沟通，祝大家有愉快的就餐体验。
+以上所有内容，由特教餐厅工作人员周周编辑整理。弱肉强食整理排版，向他们表示感谢。
+2024.10.09</pre>
 </body>
 </html>
