--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
         border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="云朵儿" title="云朵儿"></a>
 
 <br/>
-<a target="_blank" href="https://www.w3school.com.cn/tags/html_ref_byfunc.asp">
-    <font color="fe0004" size="50">
-        <p align="center">行远自迩,笃行不怠</p>
-    </font>
-</a>
 
+<audio controls autoplay>
+    <source src="file/music01.mp3" type="audio/ogg" autocapitalize="characters">
+    。
+</audio>
 
 <table align="center" style="margin: 9px;" border="6">
 
