--- a/index.html
+++ b/index.html
@@ -32,25 +32,61 @@
 
 <br/>
 
-<audio controls autoplay>
-    <source src="file/music01.mp3" type="audio/ogg" autocapitalize="characters">
+<h3>双击具体窗口可以跳转，跳转之后再双击可以跳回来</h3>
+<audio controls autoplay="autoplay" preload="auto" loop="loop">
+    <source src="file/music01.mp3" type="audio/ogg" autoplay="autoplay" preload="auto">
     。
 </audio>
-
 <table align="center" style="margin: 9px;" border="6">
 
-    特教餐厅食谱</h1></td></tr>
+    <th><a name="top"><h1>窗口</h1></a></th>
     <tr>
-        <td><h1>（供大家参考，欢迎选购。）</h1></td>
+        <td>
+            <a href="#top1"><h2>特教风味大餐</h2></a>
+        </td>
+        <td>
+            <a href="#top2"><h2>贡茶</h2></a>
+        </td>
+        <td>
+            <a href="#top3"><h2>粉圈</h2></a>
+        </td>
+
     </tr>
     <tr>
-        <td><h1></h1></td>
+        <td>
+            <a href="#top4"><h2>匠心卤</h2></a>
+        </td>
+        <td>
+            <a href="#top5"><h2>有家面馆</h2></a>
+        </td>
+        <td>
+            <a href="#top6"><h2>特教6788肉</h2></a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a href="#top7"><h2>纳福早餐</h2></a>
+        </td>
+        <td>
+            <a href="#top8"><h2>杨国福麻辣烫</h2></a>
+        </td>
+        <td>
+            <a href="#top9"><h2>汉堡</h2></a>
+        </td>
+    </tr>
+</table>
+
+
+<table align="center" style="margin: 9px;" border="6">
+    <tr>特教餐厅食谱</h1></td></tr>
+    <tr>
+        <td><h1>（供大家参考，欢迎选购。）</h1></td>
     </tr>
     <tr>
         <td><h1>一、特教风味大餐：</h1></td>
     </tr>
     <tr>
-        <td><h1>一、早餐食谱:</h1></td>
+        <td><a href="#top" name="top1"> <h1>一、早餐食谱:</h1></a></td>
     </tr>
     <tr>
         <td><h1>煮鸡蛋1元／个；</h1></td>
@@ -146,9 +182,6 @@
         <td><h1>（早餐实时变化，上面食谱仅供参考。）</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>套餐系列：</h1></td>
     </tr>
     <tr>
@@ -173,13 +206,7 @@
         <td><h1>三荤+米饭，11元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
-        <td><h1>二、贡茶</h1></td>
-    </tr>
-    <tr>
-        <td><h1></h1></td>
+        <td><a href="#top" name="top2"><h1>二、贡茶</h1></a></td>
     </tr>
     <tr>
         <td><h1>店长推荐（冷/热）大：</h1></td>
@@ -203,9 +230,6 @@
         <td><h1>整颗炖梨11.9元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>0脂轻乳茶（冷/热）中：</h1></td>
     </tr>
     <tr>
@@ -221,9 +245,6 @@
         <td><h1>鲜芋牛奶西米露9元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>厚乳牛乳茶（冷/热）中：</h1></td>
     </tr>
     <tr>
@@ -237,9 +258,6 @@
     </tr>
     <tr>
         <td><h1>椰香板栗牛乳茶11.9元。</h1></td>
-    </tr>
-    <tr>
-        <td><h1></h1></td>
     </tr>
     <tr>
         <td><h1>活力清果茶（冷）大：</h1></td>
@@ -281,9 +299,6 @@
         <td><h1>芒果杨枝甘露（大）11.9元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>经典奶茶（冷/热）中/大：</h1></td>
     </tr>
     <tr>
@@ -317,9 +332,6 @@
         <td><h1>超厚芋泥燕麦奶（大）11.9元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>气泡/养乐多（冷）大：</h1></td>
     </tr>
     <tr>
@@ -333,9 +345,6 @@
     </tr>
     <tr>
         <td><h1>金桔柠檬养乐多8.8元。</h1></td>
-    </tr>
-    <tr>
-        <td><h1></h1></td>
     </tr>
     <tr>
         <td><h1>提神咖啡（冷/热）中：</h1></td>
@@ -359,9 +368,6 @@
         <td><h1>樱花拿铁9.9元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>芝士奶盖/冰沙（冷/热）中：</h1></td>
     </tr>
     <tr>
@@ -375,9 +381,6 @@
     </tr>
     <tr>
         <td><h1>红豆沙牛乳冰（大）12元。</h1></td>
-    </tr>
-    <tr>
-        <td><h1></h1></td>
     </tr>
     <tr>
         <td><h1>冰淇淋/茶：</h1></td>
@@ -398,9 +401,6 @@
         <td><h1>蓝莓摇摇奶昔8元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>冰淇淋大圣代：</h1></td>
     </tr>
     <tr>
@@ -416,16 +416,10 @@
         <td><h1>巧克力奥利奥圣代8元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>1元加料：</h1></td>
     </tr>
     <tr>
         <td><h1>珍珠椰果红豆布丁仙草脆波波芋圆。</h1></td>
-    </tr>
-    <tr>
-        <td><h1></h1></td>
     </tr>
     <tr>
         <td><h1>甜度选择：</h1></td>
@@ -434,16 +428,10 @@
         <td><h1>3分糖，5分糖，7分糖，无糖，全糖。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>温度选择：</h1></td>
     </tr>
     <tr>
         <td><h1>正常冰，少冰，去冰，热。</h1></td>
-    </tr>
-    <tr>
-        <td><h1></h1></td>
     </tr>
     <tr>
         <td><h1>自选水果捞7.9半斤，</h1></td>
@@ -458,10 +446,7 @@
         <td><h1>草莓风味酸奶。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
-        <td><h1>三、粉圈：</h1></td>
+        <td><a href="#top" name="top3"><h1>三、粉圈：</h1></a></td>
     </tr>
     <tr>
         <td><h1>原味肉酱米粉，9元；</h1></td>
@@ -530,10 +515,7 @@
         <td><h1>单加菜品：鸡心、鸡肚、鸡肝、豆皮、土豆片、藕片、花生米、鹌鹑蛋、金针菇、海带、芋头粉、干豆腐丝、鱼丸、鱼豆腐配菜3元/份，单加菜品每天随时调整仅供参考。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
-        <td><h1>四、匠心卤：</h1></td>
+        <td><a href="#top" name="top4"><h1>四、匠心卤：</h1></a></td>
     </tr>
     <tr>
         <td><h1>（卤肉饭系列）</h1></td>
@@ -614,10 +596,7 @@
         <td><h1>香辣肉丝炒饭，12元；</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
-        <td><h1>五、有家面馆</h1></td>
+        <td><a href="#top" name="top5"><h1>五、有家面馆</h1></a></td>
     </tr>
     <tr>
         <td><h1>（汤面系列）</h1></td>
@@ -716,9 +695,6 @@
         <td><h1>牛肉，6元；</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>（店长强烈推荐：）</h1></td>
     </tr>
     <tr>
@@ -731,10 +707,7 @@
         <td><h1>红烧牛肉面，14元；</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
-        <td><h1>六、特教6788肉酱拌饭土豆泥</h1></td>
+        <td><a href="#top" name="top6"><h1>六、特教6788肉酱拌饭土豆泥</h1></a>/td>
     </tr>
     <tr>
         <td><h1>（肉酱土豆泥系列）</h1></td>
@@ -794,10 +767,7 @@
         <td><h1>蟹黄虾仁拌饭，16元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
-        <td><h1>七、纳福早餐（杨国福麻辣烫屋内）</h1></td>
+        <td><a href="#top" name="top7"><h1>七、纳福早餐（杨国福麻辣烫屋内）</h1></a></td>
     </tr>
     <tr>
         <td><h1>素馅包子1.5</h1></td>
@@ -851,13 +821,7 @@
         <td><h1>（驴肉，猪肉，猪肉大葱，猪肉酸菜，牛肉大葱，猪肉青椒，猪肉香姑，猪肉白菜，猪肉芹菜，素三鲜，猪肉玉米。）</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
-        <td><h1>八、杨国福麻辣烫（麻辣烫、麻辣拌自选14.8元/斤）。</h1></td>
-    </tr>
-    <tr>
-        <td><h1></h1></td>
+        <td><a href="#top" name="top8"><h1>八、杨国福麻辣烫（麻辣烫、麻辣拌自选14.8元/斤）。</h1></a></td>
     </tr>
     <tr>
         <td><h1>超级有料，八小时慢炖排骨汤；</h1></td>
@@ -866,10 +830,7 @@
         <td><h1>独特口味，欢迎同学们光临！！</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
-        <td><h1>九汉堡</h1></td>
+        <td><a href="#top" name="top9"><h1>九汉堡</h1></a></td>
     </tr>
     <tr>
         <td><h1>劲脆鸡肉堡，6元；</h1></td>
@@ -1106,9 +1067,6 @@
         <td><h1>香辣鸡腿堡2个-骨肉相连2个-鸡块-薯条-2杯可乐，36元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>（店长强烈推荐，超值优惠：）</h1></td>
     </tr>
     <tr>
@@ -1124,16 +1082,13 @@
         <td><h1>香辣鸡腿堡+烤肉卷+可乐=16元。</h1></td>
     </tr>
     <tr>
-        <td><h1></h1></td>
-    </tr>
-    <tr>
         <td><h1>以上食品若有变化，会及时通知大家，若有疑问可以和食堂负责人沟通，祝大家有愉快的就餐体验。</h1></td>
     </tr>
     <tr>
         <td><h1>以上所有内容，由特教餐厅工作人员周周编辑整理。弱肉强食整理排版，向他们表示感谢。</h1></td>
     </tr>
     <tr>
-        <td><h1>2024.10.09
+        <td><h1>2024.10.09</h1></td></tr>
 
 
 </table>
