按钮测试读屏

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br/>
 
 <h3>双击具体窗口可以跳转，跳转之后再双击可以跳回来</h3>
-<audio controls autoplay="autoplay" preload="auto" loop="loop">
+<audio controls  preload="auto" loop="loop">
     <source src="file/music01.mp3" type="audio/ogg" autoplay="autoplay" preload="auto">
     。
 </audio>
@@ -46,7 +46,7 @@
             <a href="#top1"><h2>特教风味大餐</h2></a>
         </td>
         <td>
-            <a href="#top2"><h2>贡茶</h2></a>
+            <button ><a href="#top2"><h2>贡茶</h2></a></button>
         </td>
         <td>
             <a href="#top3"><h2>粉圈</h2></a>
@@ -207,7 +207,7 @@
         <td><h1>三荤+米饭，11元。</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top2"><h1>二、贡茶</h1></a></td>
+        <td><a href="#top" name="top2" ><h1>二、贡茶</h1></a></td>
     </tr>
     <tr>
         <td><h1>店长推荐（冷/热）大：</h1></td>
@@ -447,7 +447,7 @@
         <td><h1>草莓风味酸奶。</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top3"><h1>三、粉圈：</h1></a></td>
+        <td><button autofocus="autofocus"><a href="#top" name="top3"><h1>三、粉圈：</h1></a></button></td>
     </tr>
     <tr>
         <td><h1>原味肉酱米粉，9元；</h1></td>
@@ -822,7 +822,7 @@
         <td><h1>（驴肉，猪肉，猪肉大葱，猪肉酸菜，牛肉大葱，猪肉青椒，猪肉香姑，猪肉白菜，猪肉芹菜，素三鲜，猪肉玉米。）</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top8"><h1>八、杨国福麻辣烫（麻辣烫、麻辣拌自选14.8元/斤）。</h1></a></td>
+        <td><button autofocus="autofocus"><a href="#top" name="top8"><h1>八、杨国福麻辣烫（麻辣烫、麻辣拌自选14.8元/斤）。</h1></a></button></td>
     </tr>
     <tr>
         <td><h1>超级有料，八小时慢炖排骨汤；</h1></td>
