--- a/index.html
+++ b/index.html
@@ -34,19 +34,21 @@
 <br/>
 
 <h3>双击具体窗口可以跳转，跳转之后再双击可以跳回来</h3>
-<audio controls  preload="auto" loop="loop">
-    <source src="file/music01.mp3" type="audio/ogg" autoplay="autoplay" preload="auto">
+<audio controls  loop="loop">
+    <source src="file/music01.mp3" type="audio/ogg" >
     。
 </audio>
 <table align="center" style="margin: 9px;" border="6">
+<tr co>
 
-    <th><a name="top"><h1>窗口</h1></a></th>
+    <th colspan="3"><button autofocus="autofocus"><a name="top"><h1>窗口</h1></a></button></th>
+</tr>
     <tr>
         <td>
             <a href="#top1"><h2>特教风味大餐</h2></a>
         </td>
         <td>
-            <button ><a href="#top2"><h2>贡茶</h2></a></button>
+            <a href="#top2"><h2>贡茶</h2></a>
         </td>
         <td>
             <a href="#top3"><h2>粉圈</h2></a>
@@ -84,7 +86,7 @@
         <td><h1>（供大家参考，欢迎选购。）</h1></td>
     </tr>
     <tr>
-        <td><h1>一、特教风味大餐：</h1></td>
+        <button autofocus="autofocus">    <td><h1>一、特教风味大餐：</h1></td></button>
     </tr>
     <tr>
         <td><a href="#top" name="top1"> <h1>一、早餐食谱:</h1></a></td>
@@ -207,7 +209,7 @@
         <td><h1>三荤+米饭，11元。</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top2" ><h1>二、贡茶</h1></a></td>
+        <td><button autofocus="autofocus"><a href="#top" name="top2" ><h1>二、贡茶</h1></a></button></td>
     </tr>
     <tr>
         <td><h1>店长推荐（冷/热）大：</h1></td>
@@ -516,7 +518,7 @@
         <td><h1>单加菜品：鸡心、鸡肚、鸡肝、豆皮、土豆片、藕片、花生米、鹌鹑蛋、金针菇、海带、芋头粉、干豆腐丝、鱼丸、鱼豆腐配菜3元/份，单加菜品每天随时调整仅供参考。</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top4"><h1>四、匠心卤：</h1></a></td>
+        <td><button autofocus="autofocus"><a href="#top" name="top4"><h1>四、匠心卤：</h1></a></button></td>
     </tr>
     <tr>
         <td><h1>（卤肉饭系列）</h1></td>
@@ -597,7 +599,7 @@
         <td><h1>香辣肉丝炒饭，12元；</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top5"><h1>五、有家面馆</h1></a></td>
+        <td><button autofocus="autofocus"><a href="#top" name="top5"><h1>五、有家面馆</h1></a></button></td>
     </tr>
     <tr>
         <td><h1>（汤面系列）</h1></td>
@@ -708,7 +710,7 @@
         <td><h1>红烧牛肉面，14元；</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top6"><h1>六、特教6788肉酱拌饭土豆泥</h1></a>/td>
+        <td><button autofocus="autofocus"><a href="#top" name="top6"><h1>六、特教6788肉酱拌饭土豆泥</h1></a></button></td>
     </tr>
     <tr>
         <td><h1>（肉酱土豆泥系列）</h1></td>
@@ -768,7 +770,7 @@
         <td><h1>蟹黄虾仁拌饭，16元。</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top7"><h1>七、纳福早餐（杨国福麻辣烫屋内）</h1></a></td>
+        <td><button autofocus="autofocus"><a href="#top" name="top7"><h1>七、纳福早餐（杨国福麻辣烫屋内）</h1></a></button></td>
     </tr>
     <tr>
         <td><h1>素馅包子1.5</h1></td>
@@ -831,7 +833,7 @@
         <td><h1>独特口味，欢迎同学们光临！！</h1></td>
     </tr>
     <tr>
-        <td><a href="#top" name="top9"><h1>九汉堡</h1></a></td>
+        <td><button autofocus="autofocus"><a href="#top" name="top9"><h1>九汉堡</h1></a></button></td>
     </tr>
     <tr>
         <td><h1>劲脆鸡肉堡，6元；</h1></td>
