1，适配好的返回按钮

--- a/index.html
+++ b/index.html
@@ -12,20 +12,31 @@
 <div id="window-list"></div>
 <div id="menu-display"></div>
 
-<p id="hello-message">以上食品若有变化，会及时通知大家，若有疑问可以和食堂负责人沟通，祝大家有愉快的就餐体验。
-    以上所有内容，由特教餐厅工作人员周周编辑整理。弱肉强食整理排版，向他们表示感谢。
-    2024.10.09</p>
-
-<a  target="_blank"
-    href="https://qm.qq.com/cgi-bin/qm/qr?k=rR6Rp4FyOj5pXRX7POYRpsEmrfJKw4Lm&jump_from=webapi&authKey=LbG7rpocuiMguVKT4odxx4jL6oRibdoNt+tIe4JaQjsV2SIc971akXHJuR0BEcns"><img
-        border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="云朵儿" title="云朵儿"></a>
-
-<br/>
+<p id="hello-message2">
+    个人招募志愿者，如果愿意的话，收集一下其他食堂的菜谱，联系我微信：catastrophe717
 
 
-<audio name="music_top"  controls  loop="loop" >
-    <source src="file/music01.mp3" type="audio/ogg">
-</audio>
+</p>
+
+<B id="hello-message">
+    <p >以上食品若有变化，会及时通知大家，若有疑问可以和食堂负责人沟通，祝大家有愉快的就餐体验。
+        以上所有内容，由特教餐厅工作人员周周编辑整理。弱肉强食整理排版，向他们表示感谢。
+        2024.10.09</p>
+
+    <a  target="_blank"
+        href="https://qm.qq.com/cgi-bin/qm/qr?k=rR6Rp4FyOj5pXRX7POYRpsEmrfJKw4Lm&jump_from=webapi&authKey=LbG7rpocuiMguVKT4odxx4jL6oRibdoNt+tIe4JaQjsV2SIc971akXHJuR0BEcns"><img
+            border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="云朵儿" title="云朵儿"></a>
+
+    <br/>
+
+
+    <audio name="music_top"  controls  loop="loop" >
+        <source src="file/music01.mp3" type="audio/ogg">
+    </audio>
+
+
+</B>
+
 
 
 
@@ -34,4 +45,3 @@
 </body>
 
 </html>
- 
