--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <div id="menu-display"></div>
 
 <p id="hello-message2">
-    个人招募志愿者，如果愿意的话，收集一下其他食堂的菜谱，联系我微信：catastrophe717
-
-
+    愿意和我们一起整理食谱和网页的，请联系微信：catastrophe717
 </p>
 
 <B id="hello-message">
@@ -23,6 +21,7 @@
         以上所有内容，由特教餐厅工作人员周周编辑整理。弱肉强食整理排版，向他们表示感谢。
         2024.10.09</p>
 
+    <button><a href="file/特食.apk">点击下载特食APP</a> </button>
     <a  target="_blank"
         href="https://qm.qq.com/cgi-bin/qm/qr?k=rR6Rp4FyOj5pXRX7POYRpsEmrfJKw4Lm&jump_from=webapi&authKey=LbG7rpocuiMguVKT4odxx4jL6oRibdoNt+tIe4JaQjsV2SIc971akXHJuR0BEcns"><img
             border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="云朵儿" title="云朵儿"></a>
